app/styles/components/photo-carousel.scss
.photo-carousel {
  .frame {
    background-color: black;
    text-align: center;
    padding: 40px;
    padding-bottom: 0px;

    img {
      height: 400px;
    }
  }

  .toolbar {
    background-color: black;
    text-align: center;
    padding: 10px 0;
    .next,.previous {
      margin: 0px 15px;
      background: none;
      border: 0;
      color: black;
      font: inherit;
      cursor: pointer;
      line-height: normal;
      overflow: visible;
      padding: 0;
      background-color: transparent;
      color: white
    }
  }

  @media (max-width: 750px) {
    .top-bar {
      margin: 10px;
      height: 24px;
      display: flex;
      .close {
        display: inline-block;
        height: 24px;
        width: 24px;
        color: white;
        * {
          vertical-align: top;
        }
        a:visited {
          color: white;
        }
      }
    }
    background-color: black;
    position: absolute;
    height: 100vh;
    width: 100vw;
    left: 0;
    top:0;
    .frame {
      display: flex;
      flex-direction: column;
      justify-content: center;
      padding: 0;
      min-height: 80vh;
      img {
        height: auto;
        max-width: 100vw
      }
    }
  }
}

